# czech-banking-2

./: pyproject.toml
.github/workflows/: ci.yml
config/: segments.yaml  settings.yaml
config/competitors/: air_bank.yaml  artesa.yaml  banka_creditas.yaml  ceska_sporitelna.yaml  citibank.yaml  csob.yaml  csob_postovni.yaml  erb_bank.yaml  fio_banka.yaml  jt_banka.yaml  komercni_banka.yaml  mbank.yaml  moneta.yaml  oberbank.yaml  partners_bank.yaml  raiffeisenbank.yaml  revolut_cz.yaml  trinity_bank.yaml  unicredit.yaml
dashboard/: package-lock.json
dashboard/public/logos/: _README.md
dashboard/src/: App.tsx  api.ts  index.css  types.ts  utils.ts
dashboard/src/components/: ErrorBanner.tsx  Layout.tsx  PageHeader.tsx
dashboard/src/components/finecim/: ArticleDetail.tsx  CampaignCard.tsx  CompanyLogo.tsx  CompanyModal.tsx  CompanyTile.tsx  ComparisonWizard.tsx  EmptyState.tsx  ExecSummaryArchive.tsx  FavoriteButton.tsx  FilterBar.tsx  (+6 more)
dashboard/src/hooks/: useFavorites.ts  useFetch.ts
dashboard/src/pages/: Competitors.tsx  Monitor.tsx  Overview.tsx  Signals.tsx  Status.tsx
finecim-research/: FINECIM-SPEC.md
src/: api.py  cli.py  export.py  scheduler.py
src/alerts/: __init__.py  telegram.py
src/analysis/: change_detector.py
src/collectors/: ares.py  base.py  job_postings.py  news.py  website.py
src/models/: __init__.py  database.py  schema.sql
src/security/: urls.py
tests/: conftest.py  test_analyzers.py  test_api.py  test_change_detector.py  test_database.py  test_scheduler.py  test_security_urls.py  test_signal.py  test_telegram_alerter.py
